--- a/WebContent/lib/css/article.css
+++ b/WebContent/lib/css/article.css
@@ -18,12 +18,11 @@ table {word-break:break-all;}
 }
 p.select_box {float:right;}
 p.hit {
-	font-size: 16px;
+	font-size: 14px;
 	font-weight: 300;
-	color: #202020;
 }
 p.hit b {
-	font-size: 18px;
+	font-size: 14px;
 	font-weight: 500;
 }
 p.hit span {padding:0 7px 0 12px; background:url(/images/article/hit_cut.gif) no-repeat left 0px;}
@@ -37,19 +36,19 @@ p.hit span a.h_btn img {margin:-2px 0 0 4px;}
 .list_style_1 tr.lately td {background:#fffcfc; border-bottom:1px solid #aeaeae;}
 .list_style_1 tr.lately td.title {font-weight:bold;}
 .list_style_1 th {
-	font-size: 14px;
+	font-size: 16px;
 	font-weight: 400;
 	padding: 15px 0; 
 	border-top:1px solid var(--main-text); 
-	border-bottom:1px solid #D4D4D4; 
+	border-bottom:1px solid #C8C8C8; 
 }
 .list_style_1 td {
-	font-size: 14px;
-	font-weight: 300;
+	font-size: 16px;
+	font-weight: 400;
 	text-align:center; 
 	padding:16px 0; 
-	color: #707070;
-	border-bottom:1px solid #d9d9d9; 
+	color: var(--main-text);
+	border-bottom:1px solid #E5E5E5; 
 	overflow:hidden; 
 	text-overflow:ellipsis;
 	white-space:nowrap;
@@ -69,16 +68,14 @@ p.hit span a.h_btn img {margin:-2px 0 0 4px;}
 
 /* 답변상태 */
 .ans_status {
-	font-size: 12px;
+	font-size: 16px;
 	font-weight: 500;
 	padding: 6px 12px;
-	color: #fff;
-	border-radius: 3px;
 	box-sizing: border-box;
 }
-.gray { background: #AAAAAA; }
-.black { background: #303030; }
-.blue  { background: #00ABF7; }
+.gray { color: #A8A8A8; }
+.black { color: #303030; }
+.orange  { color: var(--main-color); }
 
 
 /* photo_view */
@@ -185,10 +182,9 @@ p.hit span a.h_btn img {margin:-2px 0 0 4px;}
 	height: 50px;
 	line-height: 50px;
 	font-size: 16px;
-	font-weight: 500;
+	font-weight: 400;
 	margin: auto;
-	border: 1px solid #E2E2E2;
-	border-radius: 9px;
+	border: 1px solid #E5E5E5;
 	transition: border .3s ease-in-out;
 }
 .notice_view_wrap .btn_box a:hover {
@@ -294,20 +290,25 @@ h4.view_type2 {height:20px; padding-left:25px; margin-bottom:8px; color:#e95744;
 .vr_btn.mr { margin: 50px 0; }
 .vr_btn a,
 .check_btn {
-	font-size: 12px;
+	line-height: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+	width: 120px;
+	height: 40px;
+	font-size: 14px;
 	font-weight: 500;
-	padding: 15px 60px !important;
 	color: #fff;
-	background: var(--main-color);
+	background: #303030;
 	box-sizing: border-box;
-	border-radius: 10px;
+	border-radius: 21px;
 	transition: background-color .3s ease;
 }
-.vr_btn a:hover,
-.check_btn:hover { background: var(--hover-color); }
-.check_btn {
-	padding: 15px 76px;
+input[type="submit"].check_btn {
+	font-size: 14px;
+	font-weight: 700;
 }
+
 
 /*
 .part_answer {width:100%; border:2px solid #a1a1a1;}
@@ -430,34 +431,97 @@ li.comm_2 .comm_text {padding:0 0 0 18px;}
 .list_item_wrap .item_wrap {
 	display: flex;
     flex-wrap: wrap;
-    gap: 50px 35px;
+    justify-content: center;
+    gap: 34px 40px;
 }
 .list_item_wrap .item_wrap .item_list {
 	display: flex;
 	flex-direction: column;
 	column-gap: 15px;
-	width: calc((100% / 4) - 27px);
+	width: calc((100% / 3) - 27px);
 	height: 100%;
-	margin-bottom: 50px;
+/* 	margin-bottom: 50px; */
 	background: #fff;
 	border-bottom: none;
 }
-.list_item_wrap .item_wrap .item_list .item { width: 100%; }
 
 
 .list_item_wrap .item_wrap .item_list .img_wrap {
-	display: block;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	width: 100%;
 	padding: 35px 50px;
 	box-sizing: border-box;
 }
 .list_item_wrap .item_wrap .item_list .item { 
+	width: 100%;
+	position: relative;
 	border: 1px solid var(--light-gray); 
 	box-sizing: border-box; 
+	overflow: hidden;
+}
+.list_item_wrap .item_wrap .item_list .item::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 50%;
+	width: 0%;
+	height: 100%;
+	background: rgba(0,0,0,0.5);
+	transform: translateX(-50%);
+	transition: all 0.35s;
+}
+.list_item_wrap .item_wrap .item_list .item:hover::after {
+	width: 100%;
+}
+.list_item_wrap .item_wrap .item_list .item .purchase_btn {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	display: none;
+	align-items: center;
+	justify-content: center;
+	width: 188px;
+	height: 54px;
+	font-size: 16px;
+	font-weight: 700;
+	color: #fff;
+	border: 1px solid #fff;
+	z-index: 1;
+	transform: translate(-50%, -50%);
+}
+.list_item_wrap .item_wrap .item_list .item:hover .purchase_btn {
+	display: flex;
+}
+.list_item_wrap .item_wrap .item_list .item .cart_box {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top: 15px;
+	right: 15px;
+	width: 38px;
+	height: 38px;
+	border: 1px solid #ECECEC;
+	border-radius: 50%;
+	cursor: pointer;
+	z-index: 1;
 }
 .list_item_wrap .item_wrap .item_list .img_wrap img {
 	display: block;
 	margin: auto;
+}
+.list_item_wrap .item_wrap .item_list .item .price {
+	font-family: var(--font-roboto);
+	font-size: 38px;
+	font-weight: 700;
+	margin: 30px 0 4px 0;
+}
+.list_item_wrap .item_wrap .item_list .item .product_name {
+	font-size: 16px;
+	font-weight: 400;
 }
 .list_item_wrap .item_wrap .item_list .m_btn {
 	width: 100%;
@@ -509,7 +573,7 @@ li.comm_2 .comm_text {padding:0 0 0 18px;}
 .write_top p {float:right; margin-top:5px; color:#e85946;}
 .write_top p.baro {width:655px; margin-top:1px;}
 
-.write_style_1 {width:100%; border-top:1px solid #797979;}
+.write_style_1 {width:100%; margin-top: 70px; border-top:1px solid #797979;}
 .write_style_1 th {text-align:left; background:#fafafa; padding:13px 0 12px 15px; border-bottom:1px solid #e3e3e3;}
 .write_style_1 th.w_main {line-height:22px;}
 .write_style_1 th.w_main span {font-size:11px; font-weight:normal;  color:#959595;}
@@ -656,7 +720,6 @@ td.cart_main .product_box {
 .sub_table_1 table {width:100%;}
 .sub_table_1 table input { 
 	padding: 15px 5px; 
-	border-radius: 5px;
 	box-sizing: border-box; 
 }
 .sub_table_1 table th {font-size: 14px; font-weight: 400; text-align:left; padding:12px; background:#fafafa; border-bottom:1px solid #e3e3e3;}
@@ -828,9 +891,6 @@ td.cart_main .product_box {
 .product_info {
 	font-size: 15px;
 	font-weight: 500;
-	padding: 55px 0;
-    border-bottom: 1px solid #D4D4D4;
-    border-top: 1px solid #D4D4D4;
 }
 
 .product_info .info_list {
@@ -838,19 +898,21 @@ td.cart_main .product_box {
 }
 .product_info .info_list li {
    width: 100%;
-	margin-top: 30px;
+	margin-top: 16px;
 }
 .product_info .info_list li:first-child { margin-top: 0; }
 .product_info .info_list li a {
 	position: relative;
 	display: flex;
 	align-items: center;
-	column-gap: 70px;
-	font-size: 14px;
-	font-weight: 300;
+	column-gap: 20px;
+	font-size: 16px;
+	font-weight: 400;
 }
 .product_info .info_list li a span:first-child {
-	width: 58px;
+	width: 70px;
+	font-size: 16px;
+	font-weight: 600;
 }
 .product_info .info_list li a.deliver_hover .delivery_info {
 	display: none;
@@ -877,8 +939,8 @@ td.cart_main .product_box {
 .product_info .info_list li a.deliver_hover:hover .delivery_info { display: block; }
 .product_info .info_list li a > span:nth-child(2) {
 	display: flex;
-	font-size: 14px;
-	font-weight: 300;
+	font-size: 16px;
+	font-weight: 400;
 	border-radius: 0;
 }
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { height: 100%; }
@@ -986,7 +1048,7 @@ td.cart_main .product_box {
 .user_table_1 td input.ws_1 {width: 100%; max-width: 300px; }
 .user_table_1 td input.ws_2 {width:65px;}
 .user_table_1 td input.ws_3 {width:100%; max-width: 300px; }
-.user_table_1 td select.select_u1 {width:73px; height:28px;}
+.user_table_1 td select.select_u1 {width:73px; height: 32px;}
 
 /* 나의 배송지관리 */
 .s_style_1 {
@@ -1065,22 +1127,23 @@ p.color_1 {padding:15px 0 8px 0; color:#5686bd; background:url(/images/sub_2/pay
 .pay_btn a {
 	display: inline-block;
 	font-size: 16px;
-	padding: 20px 70px;
-	margin-right:5px;
+	width: 220px;
+	height: 52px;
+	line-height: 52px;
 	margin-bottom: 40px;
 	color: #fff;
 	background: var(--main-color);
 	box-sizing: border-box;
-	border-radius: 10px;
 	transition: background-color .3s ease;
 }
 .pay_btn a:hover {
 	background: var(--hover-color);
 }
 .pay_btn a.clear_btn {
-	color: var(--main-color);
+	margin-right: 20px;
+	color: var(--main-text);
 	background: #fff;
-	border: 1px solid var(--main-color);
+	border: 1px solid #E5E5E5;
 }
 
 /* 부품사용특약 */
@@ -1104,10 +1167,9 @@ p.color_1 {padding:15px 0 8px 0; color:#5686bd; background:url(/images/sub_2/pay
 	display:inline-block;
 	 padding: 8px 12px; 
 	 margin: 5px 4px 0 0; 
-	 font-size:12px; ;
+	 font-size:12px;
 	 background: #fff;
 	 text-decoration: none;
-	 border-radius: 50%;
 	 box-sizing: border-box;
 	 transition: all .3s ease-in-out;
 }
@@ -1115,7 +1177,7 @@ p.color_1 {padding:15px 0 8px 0; color:#5686bd; background:url(/images/sub_2/pay
 .paging span a.p_first,
 .paging span a.p_last {
 	display: inline-block;
-    padding: 8px 12px;
+    padding: 8px;
     margin: 0 4px 0 0;
     font-size: 12px;
     border: 1px solid #d0d0d0;
@@ -1127,7 +1189,7 @@ p.color_1 {padding:15px 0 8px 0; color:#5686bd; background:url(/images/sub_2/pay
 .paging span a.next { margin-left: 5px; }
 /* .paging span a.p_last {width:32px; padding:6px 0 0 1px; margin:0 0 0 5px; border:none; background:none; font-size:11px;} */
 /* .paging span a:hover {color:#fff;  background: var(--sub-color); } */
-.paging span b a {color: var(--sub-color); border: 1px solid #D2D2D2; }
+.paging span b a {color: var(--main-color); border: 1px solid var(--main-color); }
 .paging span b a:hover {letter-spacing:0px;}
 
 .top_search {
@@ -1152,15 +1214,23 @@ p.color_1 {padding:15px 0 8px 0; color:#5686bd; background:url(/images/sub_2/pay
 	border: none;
 	cursor: pointer;
 }
-.top_search img {vertical-align:middle;}
+
+.search_wrap { position: relative; }
 .top_search input.input_2 {
 	width: 100%;
 	max-width: 330px;
+	min-width: 300px;
 	height: 100%;
 	padding: 9px 12px; 
 	margin-right: 5px;
-	border:1px solid #D8D8D8;
+	border:1px solid #ECECEC;
+	border-radius: 21px;
 	box-sizing: border-box;
+}
+.top_search img {
+	position: absolute;
+	top: 0;
+	right: 20px;
 }
 .top_search input.input_2:focus { outline: none; }
 
@@ -1273,7 +1343,7 @@ p.color_1 {padding:15px 0 8px 0; color:#5686bd; background:url(/images/sub_2/pay
 	}
 	.detail_content ul li:first-child { max-width: 50px; }
 	.vr_btn a.clear_btn { margin-right: 0px; }
-	.list_style_1 th { font-size: 14px; }
+	.list_style_1 th { font-size: 16px; }
 	.sub_table_1 table td input.ws_2 {width: 100%;}
 	.pay_btn {
     	display: flex;
